<?xml version="1.0"?>
<package>
  <name>lcd_node</name>
  <version>0.0.1</version>
  <description>Node to display messages in LCD screen</description>

  <maintainer email="mario.mata@gcu.ac.uk">mmata</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
